--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div id="listbox" class="header">
+            <h2>My ToDo List</h2>
+        </div>
+    </div>
 </body>
 </html>
