Addded an input tag to capture the title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div class="container">
         <div id="listbox" class="header">
             <h2>My ToDo List</h2>
+
+            <input type="text" id="item" placeholder="Title...">
         </div>
     </div>
 </body>
