Added a call to action button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h2>My ToDo List</h2>
 
             <input type="text" id="item" placeholder="Title...">
+            <span onclick="newElement()" class="addBtn"></span>
         </div>
     </div>
 </body>
