--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h2>My ToDo List</h2>
 
             <input type="text" id="item" placeholder="Title...">
-            <span onclick="newElement()" class="addBtn"></span>
+            <span onclick="newElement()" class="addBtn">Add</span>
         </div>
     </div>
 </body>
