Added a list item

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <input type="text" id="item" placeholder="Title...">
             <span onclick="newElement()" class="addBtn">Add</span>
         </div>
+        <li id="list">
+            <li>Read a novel</li>
+        </li>
     </div>
 </body>
 </html>
