--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </div>
         <li id="list">
             <li>Read a novel</li>
+            <li>Make some calls</li>
+            <li>Reply to mails</li>
+            <li>Do my exercise</li>
         </li>
     </div>
 </body>
