Corrected the list syntax

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <input type="text" id="item" placeholder="Title...">
             <span onclick="newElement()" class="addBtn">Add</span>
         </div>
-        <li id="list">
+        <ul id="list">
             <li>Read a novel</li>
             <li>Make some calls</li>
             <li>Reply to mails</li>
             <li>Do my exercise</li>
-        </li>
+        </ul>
     </div>
 </body>
 </html>
